fix distance between question and ansvers on mobile

--- a/styles/gameWindow.module.css
+++ b/styles/gameWindow.module.css
@@ -52,6 +52,7 @@
     .gameWindow{
         max-width: 100%;
         align-items: center;
+        justify-content: flex-start;
         padding: 136px 0 24px;
         gap: 100px;
     }
